cif/org.eclipse.escet.cif.tests/tests/cif2plc/negative_zero_twincat/negative_zero_twincat_real/Untitled1/DUTs/TupleStruct_1.TcDUT
<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<TcPlcObject ProductVersion="3.1.0.18" Version="1.1.0.1">
  <DUT Name="TupleStruct_1">
    <Declaration>
      <![CDATA[TYPE TupleStruct_1:
    STRUCT
        field0: LREAL;
        field1: LREAL;
        field2: LREAL;
        field3: LREAL;
        field4: LREAL;
        field5: LREAL;
        field6: LREAL;
        field7: LREAL;
        field8: LREAL;
        field9: LREAL;
        field10: LREAL;
        field11: LREAL;
        field12: LREAL;
        field13: LREAL;
    END_STRUCT
END_TYPE]]>
    </Declaration>
    <ObjectProperties/>
  </DUT>
</TcPlcObject>
